# hermes-dingtalk-bridge

./: .gitignore  README.md  __init__.py  after-install.md  dingtalk-bridge.example.yaml  plugin.yaml  pyproject.toml
hermes_dingtalk_bridge/: __init__.py  __main__.py  access_control.py  ack_reaction.py  card_probe.py  card_sender.py  config.py  connection_manager.py  dingtalk_client.py  gateway_runtime.py  hermes_client.py  hook_manager.py  inbound_parser.py  logging_utils.py  message_codec.py  models.py  outbound_sender.py  plugin.py  runtime_status.py  service.py  service_manager.py  session_store.py
tests/: test_access_control.py  test_card_sender.py  test_config.py  test_connection_manager.py  test_hermes_client.py  test_hook_manager.py  test_inbound_parser.py  test_message_codec.py  test_runtime_status.py  test_service.py  test_session_store.py
