[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-dingtalk-bridge"
version = "0.1.0"
description = "Standalone DingTalk bridge plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hermes_dingtalk_bridge*"]
